modifications
- fixed test syntax to avoid codesmells
- added a document to explain how to match java version in the ide so to
  match the build on command line ("mvn clean install")
- added the test runners folder as an example for those using IntelliJ
  (let's call it "dumbyJ bloatware ship")
- added neovide (a visual vi clone) as git's default message editor
On branch feature/service_tests
Changes to be committed:
new file:   .run/SlotsServiceTest.testProfessionalSlots_WithAppointments_ReturnsBookedSlots.run.xml
new file:   docs/java_version_checklist.md
modified:   src/test/java/com/gerardo/appointments/service/SlotsServiceTest.java